smartemission/services/grafana/service.yml
apiVersion: v1
kind: Service
metadata:
  name: grafana-service
  namespace: smartemission
  labels:
    app: grafana
spec:
  ports:
  - port: 3000
  selector:
    app: grafana
